quick fix logo alignment

--- a/themes/costaricajs/source/css/global.styl
+++ b/themes/costaricajs/source/css/global.styl
@@ -11,8 +11,12 @@ h1,h2,h3
 #content ul
     margin: 0 !important
 
-.nav-section-container
-    display: inline-block
+.costaricajs-nav-logo
+    display: inline-block !important
+    float: left
+    margin-top: -5px
+    margin-right: 10px !important
+
 
 .nav-image
     vertical-align: super
